--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,12 @@ on: [push, workflow_dispatch]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DEBIAN_FRONTEND: noninteractive
+
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
+      - run: sudo apt-get -y install --no-install-recommends gcc libgtk-3-dev libayatana-appindicator3-dev
+
+      - uses: actions/checkout@v3
 
       - run: make
