--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,7 +9,7 @@ ARG NODE_VERSION="none"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends gcc libgtk-3-dev libayatana-appindicator3-dev
+    && apt-get -qy install --no-install-recommends gcc libgtk-3-dev libayatana-appindicator3-dev
 
 USER vscode
 RUN go install github.com/cespare/reflex@latest
