--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
 name: build
 on: [push, workflow_dispatch]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -7,7 +8,11 @@ jobs:
       DEBIAN_FRONTEND: noninteractive
 
     steps:
-      - run: sudo apt-get -y install --no-install-recommends gcc libgtk-3-dev libayatana-appindicator3-dev
+      - run: sudo apt-get -qy install --no-install-recommends gcc libgtk-3-dev libayatana-appindicator3-dev
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version: ^1.18
 
       - uses: actions/checkout@v3
 
