--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,17 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: make
+
+      - id: app
+        run: echo '::set-output name=name::'$(make appname)
+
+      - name: test
+        run: |
+          echo 'ref: ${{ github.ref }}'
+          echo 'name: ${{ steps.app.outputs.name }}'
+          make version
+
+      # - uses: softprops/action-gh-release@v1
+      # if: startsWith(github.ref, 'refs/tags/')
+      # with:
+      #   files: ${{ steps.app.outputs.name }}
