--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,10 @@ jobs:
         run: |
           echo 'ref: ${{ github.ref }}'
           echo 'name: ${{ steps.app.outputs.name }}'
-          make version
+          echo 'version: '$(make version)
 
-      # - uses: softprops/action-gh-release@v1
-      # if: startsWith(github.ref, 'refs/tags/')
-      # with:
-      #   files: ${{ steps.app.outputs.name }}
+      - uses: softprops/action-gh-release@v1
+        # if: startsWith(github.ref, 'refs/tags/')
+        with:
+          prerelease: not startsWith(github.ref, 'refs/tags/')
+          files: ${{ steps.app.outputs.name }}
