--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,6 @@ jobs:
           echo 'version: '$(make version)
 
       - uses: softprops/action-gh-release@v1
-        # if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          prerelease: not startsWith(github.ref, 'refs/tags/')
           files: ${{ steps.app.outputs.name }}
