--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: build
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches: ['main']
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,12 +23,6 @@ jobs:
 
       - id: app
         run: echo '::set-output name=name::'$(make appname)
-
-      - name: test
-        run: |
-          echo 'ref: ${{ github.ref }}'
-          echo 'name: ${{ steps.app.outputs.name }}'
-          echo 'version: '$(make version)
 
       - uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
