--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
 
       - run: gh workflow run release -R BitPonyLLC/homebrew-tap
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.WORKFLOW_BRADRF_PAT }}
         if: startsWith(github.ref, 'refs/tags/')
