--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 huekeys
 .reflex_installed
 
-buildinfo/build_time.txt
-buildinfo/version.txt
+buildinfo/build.yml
 
 pkg/keyboard/colornames.csv.gz
