fix bug for letting type counts go below zero and add docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "yaml.schemas": {
         "https://json.schemastore.org/github-workflow.json": "file:///workspaces/huekeys/.github/workflows/build.yml"
-    }
+    },
+    "cSpell.words": [
+        "huekeys"
+    ]
 }
