--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "https://json.schemastore.org/github-workflow.json": "file:///workspaces/huekeys/.github/workflows/build.yml"
     },
     "cSpell.words": [
-        "huekeys"
+        "huekeys",
+        "watchmgr"
     ]
 }
