--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,7 +13,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 
 USER vscode
 RUN go install github.com/cespare/reflex@latest \
-    && go install golang.org/x/tools/cmd/godoc@latest
+    && go install golang.org/x/tools/cmd/godoc@latest \
+    && go install github.com/fzipp/gocyclo/cmd/gocyclo@latest
 
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
