--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
       - id: app
         run: echo '::set-output name=name::'$(make appname)
 
-      - uses: softprops/action-gh-release@v1
+      - id: release
+        uses: softprops/action-gh-release@v1
         with:
           files: ${{ steps.app.outputs.name }}
         if: startsWith(github.ref, 'refs/tags/')
@@ -35,3 +36,10 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.WORKFLOW_BRADRF_PAT }}
         if: startsWith(github.ref, 'refs/tags/')
+
+      - uses: th0th/notify-discord@v0.4.1
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_JOB_NAME: "${{ steps.release.outputs.id }}: ${{ steps.release.outputs.url }}"
