--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,4 @@ jobs:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_JOB_NAME: "${{ steps.release.outputs.id }}: ${{ steps.release.outputs.url }}"
+          GITHUB_JOB_STATUS: ${{ job.status }}
