add option to delay menu request for permission and pass desktop env as cmdline flag and add out/err logging

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,5 +42,5 @@ jobs:
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
           GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_JOB_NAME: "${{ steps.release.outputs.id }}: ${{ steps.release.outputs.url }}"
+          GITHUB_JOB_NAME: "${{ steps.release.outputs.url }}"
           GITHUB_JOB_STATUS: ${{ job.status }}
