--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,10 +56,14 @@ jobs:
           name: ${{ needs.build.outputs.appname }}-${{ github.sha }}
           path: ${{ needs.build.outputs.appname }}
 
+      - run: echo ${{ steps.download.outputs.download-path }}
+      - run: ls -alR
+
       - id: release
         uses: softprops/action-gh-release@v1
         with:
           files: ${{ steps.download.outputs.download-path }}
+          fail_on_unmatched_files: true
 
       - run: gh workflow run release -R BitPonyLLC/homebrew-tap
         env:
