--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,20 +19,12 @@ jobs:
           sudo apt-get -qy install --no-install-recommends
           gcc libgtk-3-dev libayatana-appindicator3-dev
 
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: ^1.18
-
-      - uses: actions/checkout@v3
-
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          go-version-file: 'go.mod'
+          check-latest: true
+          cache: true
 
       - run: make
 
@@ -62,7 +54,7 @@ jobs:
       - id: release
         uses: softprops/action-gh-release@v1
         with:
-          files: ${{ steps.download.outputs.download-path }}
+          files: ${{ needs.build_outputs.appname }}/*
           fail_on_unmatched_files: true
 
       - run: gh workflow run release -R BitPonyLLC/homebrew-tap
