--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
       - id: release
         uses: softprops/action-gh-release@v1
         with:
-          files: ${{ needs.build_outputs.appname }}/*
+          files: ${{ needs.build.outputs.appname }}/*
           fail_on_unmatched_files: true
 
       - run: gh workflow run release -R BitPonyLLC/homebrew-tap
