watch for time jumps to indicate wake from pause/sleep and reopen typing input

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "https://json.schemastore.org/github-workflow.json": "file:///workspaces/huekeys/.github/workflows/build.yml"
     },
     "cSpell.words": [
+        "eventfile",
+        "eventpath",
         "huekeys",
         "sockpath",
         "systray",
